# smallest_cuda_net

./: CMakeLists.txt  README.md
net/include/: BaseMatrix.h  CPUMatrix.h  Engine.h  EngineCUDA.h  EngineSerial.h  Matrix.h
net/src/: CPUMatrix.cpp  EngineCUDA.cpp  EngineSerial.cpp
tests/: tester.cpp
